added accordion to trendbank

--- a/trendbank.html
+++ b/trendbank.html
@@ -34,55 +34,174 @@ today?">
         <div id="mainContent" class="trend_content">
             <div class="trend_carousel">
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/99_lives.jpg" alt="99 Lives">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/99_lives.jpg" alt="99 Lives"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Too%20fast%20a%20pace%2C%20too%20little%20time%2C%20causes%20societal%20schizophrenia%20and%20forces%20us%20to%20assume%20multiple%20roles.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>99 LIVES</strong><br> Too fast a pace, too little time, causes societal schizophrenia and forces us to assume multiple roles.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/anchoring.jpg" alt="Anchoring">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/anchoring.jpg" alt="Anchoring"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=A%20reaching%20back%20to%20our%20spiritual%20roots%2C%20taking%20what%20was%20secure%20from%20the%20past%20%03in%20order%20to%20be%20ready%20for%20the%20future.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>ANCHORING</strong><br> A reaching back to our spiritual roots, taking what was secure from the past in order to be ready for the future.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/atmosfear.jpg" alt="Atmosfear">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/atmosfear.jpg" alt="Atmosfear"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Polluted%20air%2C%20contaminated%20water%20and%20tainted%20food%20stir%20up%20a%20storm%20of%20%03consumer%20doubt%20and%20uncertainty.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>ATMOSFEAR</strong><br> Polluted air, contaminated water and tainted food stir up a storm of consumer doubt and uncertainty.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/being_alive.jpg" alt="Being Alive">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/being_alive.jpg" alt="Being Alive"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Awareness%20that%20good%20health%20extends%20longevity%20and%20leads%20to%20a%20new%20way%20of%20life.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>BEING ALIVE</strong><br> Awareness that good health extends longevity and leads to a new way of life.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/cocooning.jpg" alt="Cocooning">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/cocooning.jpg" alt="Cocooning"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=The%20need%20to%20protect%20oneself%20from%20the%20harsh%2C%20unpredictable%20realities%20of%20the%20outside%20world.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>COCOONING</strong><br> The need to protect oneself from the harsh, unpredictable realities of the outside world.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcd3e4b085f70f2c9a57/1404689886174/cn.png?format=1000w" alt="Clanning">
+                    <a class="accordion_toggle" href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcd3e4b085f70f2c9a57/1404689886174/cn.png?format=800w" alt="Clanning"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Belonging%20to%20a%20group%20that%20represents%20common%20feelings%2C%20causes%20or%20ideals%3B%20validating%20one%27s%20own%20belief%20system.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>CLANNING</strong><br> Belonging to a group that represents common feelings, causes or ideals; validating one's own belief system.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/cashing_out.jpg" alt="Cashing Out">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/cashing_out.jpg" alt="Cashing Out"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Working%20women%20and%20men%2C%20questioning%20personal%2Fcareer%20satisfaction%20and%20goals%2C%20opt%20for%20simpler%20living.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>CASHING OUT</strong><br> Working women and men, questioning personal/career satisfaction and goals, opt for simpler living.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/down_aging.jpg" alt="Down Aging">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/down_aging.jpg" alt="Down Aging"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Nostalgic%20for%20their%20carefree%20childhood%2C%20baby%20boomers%20find%20comfort%20in%20familiar%20pursuits%20and%20products%20from%20their%20youth.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>DOWN AGING</strong><br> Nostalgic for their carefree childhood, baby boomers find comfort in familiar pursuits and products from their youth.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/egonomics.jpg" alt="EGOnomics">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/egonomics.jpg" alt="EGOnomics"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=To%20offset%20a%20de-personalized%20society%2C%20consumers%20crave%20recognition%20of%20their%20individuality.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>EGOnomics</strong><br> To offset a de-personalized society, consumers crave recognition of their individuality.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/eveolution.jpg" alt="EVEolution">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/eveolution.jpg" alt="EVEolution"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=The%20way%20women%20think%20and%20behave%20is%20impacting%20business%2C%20causing%20a%20marketing%20shift%20away%20from%20a%20hierarchical%20model%20to%20a%20relational%20one.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>EVEolution</strong><br> The way women think and behave is impacting business, causing a marketing shift away from a hierarchical model to a relational one.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/fantasy.jpg" alt="Fantasy Adventure">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/fantasy.jpg" alt="Fantasy Adventure"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Modern%20age%20whets%20our%20desire%20for%20roads%20untaken.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>FANTASY ADVENTURE</strong><br> Modern age whets our desire for roads untaken.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/future_tense.jpg" alt="FutureTense">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/future_tense.jpg" alt="FutureTense"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Consumers%2C%20anxiety-ridden%20by%20simultaneous%20social%2C%20economic%2C%20political%20and%20ethical%20chaos%2C%20find%20themselves%20beyond%20their%20ability%20to%20cope%20with%20today%20or%20imagine%20tomorrow.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>FUTURETENSE</strong><br> Consumers, anxiety-ridden by simultaneous social, economic, political and ethical chaos, find themselves beyond their ability to cope with today or imagine tomorrow.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcd8e4b078c586ecde31/1404690131386/pr.png?format=1000w" alt="Pleasure Revenge">
+                    <a class="accordion_toggle" href="#"><img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcd8e4b078c586ecde31/1404690131386/pr.png?format=800w" alt="Pleasure Revenge"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Consumers%20are%20having%20a%20secret%20bacchanal.%20They%27re%20mad%20as%20hell%20and%20want%20to%20cut%20loose%20again.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>PLEASURE REVENGE</strong><br> Consumers are having a secret bacchanal. They're mad as hell and want to cut loose again.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/indulgences.jpg" alt="Small Indulgences">
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/indulgences.jpg" alt="Small Indulgences"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=Stressed-out%20consumers%20want%20to%20indulge%20in%20affordable%20luxuries%20and%20seek%20ways%20to%20reward%20themselves.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>SMALL INDULGENCES</strong><br> Stressed-out consumers want to indulge in affordable luxuries and seek ways to reward themselves.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcdbe4b085f70f2c9a67/1404690201706/so.png?format=1000w" alt="Save Our Society">
+                    <a class="accordion_toggle" href="#"><img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcdbe4b085f70f2c9a67/1404690201706/so.png?format=800w" alt="Save Our Society"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=The%20country%20rediscovers%20a%20social%20conscience%20of%20ethics%2C%20passion%20and%20compassion.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>SAVE OUR SOCIETY</strong><br> The country rediscovers a social conscience of ethics, passion and compassion.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/icon_toppling.jpg" alt="Icon Toppling"></a>
+                    <a class="accordion_toggle" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/icon_toppling.jpg" alt="Icon Toppling"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=A%20new%20socioquake%20transforms%20mainstream%20America%20and%20the%20world%20as%20the%20pillars%20of%20society%20are%20questioned%20and%20rejected.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>ICON TOPPLING</strong><br> A new socioquake transforms mainstream America and the world as the pillars of society are questioned and rejected.</p>
+                    </div>
                 </div>
                 <div class="slide">
-                    <img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcdce4b085f70f2c9a69/1404690307154/vc.png?format=1000w" alt="Vigilante Consumer">
+                    <a class="accordion_toggle" href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcdce4b085f70f2c9a69/1404690307154/vc.png?format=800w" alt="Vigilante Consumer"></a>
+                    <div class="method_description">
+                        <div class="consulting_social right">
+                            <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/trendbank/" class="facebook"></a>
+                            <a target="_blank" href="//twitter.com/home?status=The%20consumer%20manipulates%20marketers%20and%20the%20marketplace%20through%20pressure%20protest%20and%20politics.%20%23fpbr%20http://www.faithpopcorn.com/trendbank/" class="twitter"></a>
+                        </div>
+                        <p><strong>VIGILANTE CONSUMER</strong><br> The consumer manipulates marketers and the marketplace through pressure protest and politics.</p>
+                    </div>
                 </div>
             </div>
         </div>
