fixes for talentbank and futurist thumbnails

--- a/the-team.html
+++ b/the-team.html
@@ -35,10 +35,10 @@ today?">
             <div id="talentbankIntro" class="clearfix team_intro">
                 <a href="#ted" class="thumbnail ted"></a>
                 <a href="#tiana" class="thumbnail tiana"></a>
+                <h2 class="talentbank_headline team_headline"><strong>FPBR</strong>Futurists</h2>
+                <h3 class="talentbank_description team_description">With tenures as long as 26 years, FPBR has maintained a consistent management team that have guided Faith's trend principles over four decades. Outside of the management team, we are made up of Sr. and Jr. Strategists, Consultants, Trend analysts, as well as a string support team of finance, design, digital, and IT staff.</h3>
                 <a href="#kathleen" class="thumbnail kathleen"></a>
                 <a href="#kate" class="thumbnail kate"></a>
-                <h2 class="talentbank_headline"><strong>FPBR</strong> Futurists</h2>
-                <h3 class="talentbank_description">With tenures as long as 26 years, FPBR has maintained a consistent management team that have guided Faith's trend principles over four decades. Outside of the management team, we are made up of Sr. and Jr. Strategists, Consultants, Trend analysts, as well as a string support team of finance, design, digital, and IT staff.</h3>
                 <a href="#billie" class="thumbnail billie"></a>
                 <a href="#ron" class="thumbnail ron"></a>
                 <a href="#nyla" class="thumbnail nyla"></a>
