added scroll indicator

--- a/case-studies.html
+++ b/case-studies.html
@@ -9,7 +9,6 @@ today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" type="image/x-icon" href="http://www.faithpopcorn.com/favicon.ico"/>
-        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="stylesheets/screen.css">
     </head>
     <body class="main home">
@@ -18,6 +17,7 @@ today?">
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Case Studies</h1>
         </header>
+        <div class="scroll_hint up"></div>
         <nav id="mainNav" class="main_nav hidden">
             <ul class="nav_list">
                 <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
