--- a/futurist-ceo.html
+++ b/futurist-ceo.html
@@ -9,7 +9,6 @@ today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" type="image/x-icon" href="http://www.faithpopcorn.com/favicon.ico"/>
-        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="stylesheets/screen.css">
     </head>
     <body class="main home">
@@ -18,6 +17,7 @@ today?">
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Faith Popcorn</h1>
         </header>
+        <div class="scroll_hint up"></div>
         <nav id="mainNav" class="main_nav hidden">
             <ul class="nav_list">
                 <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
@@ -48,8 +48,8 @@ today?">
             <p>The New York Times has called her "The Trend Oracle", Fortune Magazine named her, "The Nostradamus of Marketing", and she is recognized as America's foremost Trend expert. She has identified such sweeping societal movements as "Cocooning", "AtmosFear", "Anchoring", "99 Lives", "Icon Toppling" and "Vigilante Consumer". As key strategist for Faith Popcorn's BrainReserve, Faith applies her insight into cultural and business Trends to help FPBR clients reposition established brands/companies, develop new models and innovate. She is a trusted advisor to the CEOs of The Fortune 500.</p>
             <p>With a documented 95% accuracy rate, Faith predicted thte demand for fresh foods and four-wheel drives, as well as the spiritual tenor of the millennium with Cocooning. She was the first to anticpate the explosive growth of home delivery, home businesses and home shopping. Additionally, she predicted the rise of Social Media and has a significant following on Facebook and Twitter. Her FutureView, which focuses on how Trends are affecting consumer lifestyles and purchasing behavior, has been presented to thousands of audiences across the globe. Heralded for her extraordinary ability to forecast emerging consumer patterns, Faith is frequently interviewed and cited in the media in The New York Times, Time, Newsweek, Fortune, "The Today Show", "Face the Nation", and CNN.</p>
             <p>Faith was raised in Shanghai, China, is a fifth generation New Yorker, and a graduate of New York University and New York's High School of Performing Arts. She is the single mother of two Chines daughters, gg 14 and cc 7.</p>
-            <!--<h4 class="ask_faith_heading">Have a fabulous <strong>question</strong>? Get a fabulous <strong>answer</strong>.</h4>-->
         </div>
+        <div class="scroll_hint down"></div>
         <footer class="footer">
             <h2 class="footer_heading">FAITH POPCORN'S <strong>BRAIN</strong>RESERVE</h2>
         </footer>
