--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@ today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" type="image/x-icon" href="http://www.faithpopcorn.com/favicon.ico"/>
-        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="stylesheets/screen.css">
     </head>
     <body class="main home">
@@ -18,6 +17,7 @@ today?">
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Contact Us</h1>
         </header>
+        <div class="scroll_hint up"></div>
         <nav id="mainNav" class="main_nav hidden">
             <ul class="nav_list">
                 <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
@@ -67,6 +67,7 @@ today?">
                 <a target="_blank" href="http://www.linkedin.com/pub/faith-popcorn/1/879/6b3" class="linkedin"></a>
             </div>
         </div>
+        <div class="scroll_hint down"></div>
         <footer class="footer">
             <h2 class="footer_heading">FAITH POPCORN'S <strong>BRAIN</strong>RESERVE</h2>
         </footer>
