--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@ today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" type="image/x-icon" href="http://www.faithpopcorn.com/favicon.ico"/>
-        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="stylesheets/screen.css">
     </head>
     <body class="main home">
@@ -18,6 +17,7 @@ today?">
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Home</h1>
         </header>
+        <div class="scroll_hint up"></div>
         <nav id="mainNav" class="main_nav hidden">
             <ul class="nav_list">
                 <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
@@ -32,8 +32,10 @@ today?">
             </ul>
         </nav>
         <div id="mainContent" class="home_intro">
-            <a id="enterHome" href="#" class="enter_home"></a>
-            <a id="fullSiteLink" href="http://www.faithpopcorn.com/" class="full_site">Visit Full Site Here</a>
+            <div id="homeIntro">
+                <a id="enterHome" href="#" class="enter_home"></a>
+                <a id="fullSiteLink" href="http://www.faithpopcorn.com/" class="full_site">Visit Full Site Here</a>
+            </div>
             <div id="carousel" class="home_carousel hidden">
                 <div class="slide">
                     <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/5436fb2de4b07f1e91b33fa9/1412889535747/PITTSBURGH+COVER.jpg?format=800w" alt="One Smart City"></a>
@@ -61,6 +63,7 @@ today?">
                 </div>
             </div>
         </div>
+        <div class="scroll_hint down"></div>
         <footer class="footer">
             <h2 class="footer_heading">FAITH POPCORN'S <strong>BRAIN</strong>RESERVE</h2>
         </footer>
