added menu to case studies

--- a/case-studies.html
+++ b/case-studies.html
@@ -31,22 +31,29 @@ today?">
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <div id="mainContent" class="trend_content">
-            <div class="trend_carousel">
-                <div class="slide">
+        <div id="mainContent" class="case_content">
+            <ul id="caseStudyLinks" class="nav_list">
+                <li><a href="#homeDepot">Home Depot</a></li>
+                <li><a href="#tyson">Tyson</a></li>
+                <li><a href="#tylenol">Tylenol</a></li>
+                <li><a href="#cocaCola">Coca-Cola</a></li>
+            </ul>
+            <div id="cases" class="cases">
+                <div id="homeDepot" class="slide">
                     <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266b4e4b0ebc5a8dc0d3b/1409443511011/?format=800w" alt="Home Depot">
                 </div>
-                <div class="slide">
+                <div id="tyson" class="slide">
                     <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266c8e4b0ebc5a8dc0d62/1409443530278/?format=800w" alt="Tyson">
                 </div>
-                <div class="slide">
+                <div id="tylenol" class="slide">
                     <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266bce4b0ebc5a8dc0d47/1409443519256/?format=800w" alt="Tylenol">
                 </div>
-                <div class="slide">
+                <div id="cocaCola" class="slide">
                     <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266a5e4b0ebc5a8dc0d19/1409443495323/?format=1500w" alt="Coca-Cola">
                 </div>
             </div>
         </div>
+        <div class="scroll_hint down"></div>
         <footer class="footer">
             <h2 class="footer_heading">FAITH POPCORN'S <strong>BRAIN</strong>RESERVE</h2>
         </footer>
