added book faith and squeezed into menu

--- a/book-faith.html
+++ b/book-faith.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Contact Us - Faith Popcorn's BrainReserve - Mobile</title>
+        <title>Book Faith to Speak - Faith Popcorn's BrainReserve - Mobile</title>
         <meta name="description" content="if you knew everything about tomorrow... what would you do differently
 today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@ today?">
         <header class="header clearfix">
             <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
-            <h1 id="mainHeading" class="header_heading">Contact Us</h1>
+            <h1 id="mainHeading" class="header_heading">Book Faith</h1>
         </header>
         <div class="scroll_hint up"></div>
         <nav id="mainNav" class="main_nav hidden">
@@ -32,10 +32,32 @@ today?">
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <div id="mainContent" class="contact_content">
+        <div id="mainContent" class="book_content">
+            <div class="videos">
+                <div class="video">
+                    <p class="poster"><a href="http://vimeo.com/92732568" target="_blank"><img src="//static.squarespace.com/static/ta/536934b6e4b0c3ef16a97e35/3400/assets/images/hbs.png"></a></p>
+                    <h2>Faith at HBS in NYC - 2014</h2>
+                    <h3>SPEAKING ON FLYING INTO THE FUTURE</h3>
+                </div>
+                <div class="video">
+                    <p class="poster"><a href="http://www.youtube.com/watch?v=MB8dsTkA_PA" target="_blank"><img src="//static.squarespace.com/static/ta/536934b6e4b0c3ef16a97e35/3400/assets/images/espn.png"></a></p>
+                    <h2>FAITH AT ESPN W - 2012</h2>
+                    <h3>SPEAKING ON REVEOLUTION</h3>
+                </div>
+                <div class="video">
+                    <p class="poster"><a href="http://www.youtube.com/watch?v=xrOJ0bChr14" target="_blank"><img src="//static.squarespace.com/static/ta/536934b6e4b0c3ef16a97e35/3400/assets/images/capital.png"></a></p>
+                    <h2>CONCIOUS CAPITALISM - 2011</h2>
+                    <h3>EVEOLUTION: THE FUTURE OF WOMEN</h3>
+                </div>
+                <div class="video">
+                    <p class="poster"><a href="http://www.youtube.com/watch?v=5-KiWK9eg4o" target="_blank"><img src="//static.squarespace.com/static/ta/536934b6e4b0c3ef16a97e35/3400/assets/images/idea.png"></a></p>
+                    <h2>FAITH AT IDEACITY - 2010</h2>
+                    <h3>SPEAKING ON</h3>
+                </div>
+            </div>
             <form class="contact_form">
                 <fieldset>
-                    <legend>Email</legend>
+                    <legend>BOOK FAITH TO SPEAK</legend>
                     <div class="input_wrapper input_inline">
                         <label for="name" class="visuallyhidden">Name</label>
                         <input id="name" name="name" type="text" placeholder="NAME">
@@ -53,20 +75,6 @@ today?">
                     </div>
                 </fieldset>
             </form>
-            <div class="map_image">
-                <a href="//maps.google.com/maps?q=40.76355880000001,-73.97069520000002" target="_blank" title="View map in new window"><img src="//maps.googleapis.com/maps/api/staticmap?markers=40.76355880000001,-73.97069520000002&size=400x250&scale=2&zoom=13.0&sensor=false"></a>
-            </div>
-            <div class="contact_info">
-                <p>info@faithpopcorn.com</p>
-                <p>TEL: (212) 772.7778</p>
-                <p>FAX: (212) 772.7787</p>
-                <p>55 EAST 59TH ST, 18TH FLOOR, NEW YORK, NY 10022</p>
-            </div>
-            <div class="contact_social">
-                <a target="_blank" href="https://www.facebook.com/FaithPopcorn?fref=ts" class="facebook"></a>
-                <a target="_blank" href="https://twitter.com/FaithPopcorn" class="twitter"></a>
-                <a target="_blank" href="http://www.linkedin.com/pub/faith-popcorn/1/879/6b3" class="linkedin"></a>
-            </div>
         </div>
         <div class="scroll_hint down"></div>
         <footer class="footer">
