--- a/talentbank.html
+++ b/talentbank.html
@@ -21,6 +21,7 @@ today?">
         <nav id="mainNav" class="main_nav hidden">
             <ul class="nav_list">
                 <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
+                <li><a href="book-faith.html">Book Faith to Speak</a></li>
                 <li><a href="trendbank.html">Trendbank</a></li>
                 <li><a href="case-studies.html">Case Studies</a></li>
                 <li><a href="consulting.html">Consulting</a></li>
