Mostly CSS changes

--- a/book-faith.html
+++ b/book-faith.html
@@ -67,7 +67,7 @@ today?">
                         <input id="email" name="email" type="email" placeholder="EMAIL">
                     </div>
                     <div class="input_wrapper">
-                        <label for="subject" class="visuallyhidden">Subject</label>
+                        <label for="subject" class="visuallyhidden">Message</label>
                         <input id="subject" name="subject" type="text" placeholder="SUBJECT">
                     </div>
                     <div class="input_wrapper">
