--- a/talentbank.html
+++ b/talentbank.html
@@ -36,7 +36,7 @@ today?">
             <div id="talentbankIntro" class="clearfix">
                 <a href="#grant" class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53bb092ae4b0cf224ee38193/53bb1366e4b00b0a9517278b/1405487671531/mccracken.jpg?format=400w)"></a>
                 <a href="#tony" class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53cad68de4b006756b70bd71/53cc168ee4b0f5f633184142/1405884095705/hsieh_t.jpg?format=200w)"></a>
-                <h2 class="talentbank_headline">A collection of <strong>10,000</strong> of the world's most <strong>brilliant minds</strong></h2>
+                <h2 class="talentbank_headline">A collection<br> of <strong>10,000</strong> of the world's most <strong>brilliant minds</strong></h2>
                 <h3 class="talentbank_description">This brilliant group forms a proprietary asset which helps us envision future brands and category dynamics.</h3>
                 <a href="#majora" class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53cad68de4b006756b70bd71/53cc16a6e4b0f5f633184165/1405884083202/?format=200w)"></a>
                 <a href="#joy" class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53cad68de4b006756b70bd71/53cc161fe4b03fc272f1ea1f/1405884029944/bauer.jpg?format=200w);"></a>
