--- a/consulting.html
+++ b/consulting.html
@@ -15,7 +15,7 @@ today?">
         <header class="header clearfix">
             <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
-            <h1 id="mainHeading" class="header_heading">Our Methodology</h1>
+            <h1 id="mainHeading" class="header_heading">Methodology</h1>
         </header>
         <div class="scroll_hint up"></div>
         <nav id="mainNav" class="main_nav hidden">
